--- a/pkg/jsonrpcviamq/DESCRIPTION
+++ b/pkg/jsonrpcviamq/DESCRIPTION
@@ -4,9 +4,9 @@ Title: Execute JSON-RPC messages retrieved from message queue
 Version: 0.5
 Date: 2013-04-17
 Author: Jesse Ross <jross@cornell.edu>
-Depends: R (>= 2.13.0), rJava (>= 0.6-0), messageQueue (>= 0.4), RJSONIO, futile.logger, testthat
+Depends: R (>= 2.13.0), rJava (>= 0.6-0), messageQueue (>= 0.4), RJSONIO (>= 1.0-3), futile.logger, testthat
 Suggests: testthat
-Imports: rJava (>= 0.6-0), RJSONIO, messageQueue (>= 0.4), futile.logger
+Imports: rJava (>= 0.6-0), RJSONIO (>= 1.0-3), messageQueue (>= 0.4), futile.logger
 SystemRequirements: Java (>=7.0)
 Maintainer: Matt MacGillivray <matthew.macgillivray@cornell.edu>
 Description: A very simple json-rpc server (loop) that gets requests from a message queue (activeMQ or rabbitMQ) and will reply to a queue if necessary.
